@@ -1,0 +1,3 @@
+# qproperty
+
+Warns when a non-CONSTANT Q_PROPERTY is missing a NOTIFY signal.
