@@ -1,0 +1,2 @@
+qproperty-without-notify/main.cpp:6:5: warning: Q_PROPERTY should have either NOTIFY or CONSTANT [-Wclazy-qproperty-without-notify]
+qproperty-without-notify/main.cpp:9:5: warning: Q_PROPERTY should have either NOTIFY or CONSTANT [-Wclazy-qproperty-without-notify]
