@@ -51,6 +51,7 @@
 * v1.3 ()
   - New checks:
     connect-3arg-lambda
+    qproperty-without-notify
   - missing-qobject-macro is now a level2 check, instead of level1. Because,
     people can omit Q_OBJECT intentionally.
   - Added -only-qt option, which will make clazy bailout early on non-Qt files.
